Avances mobile web

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -7,7 +7,7 @@ const showMore = posts.length > 3; // Muestra el botón "Ver más" si hay más d
 ---
 
 <section
-  class="w-full flex justify-center py-16 bg-bgDark1/60 relative section-with-glow"
+  class="w-full flex justify-center py-16 bg-bgDark1/60 relative section-with-glow overflow-hidden"
   id="blog"
 >
   <div class="container">
