--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -90,7 +90,7 @@ const navbarLinks = [
   <!-- Mobile navbar -->
   <div
     id="mobileMenu"
-    class="flex flex-col mt-16 lg:hidden absolute top-4 left-0 bg-bgDark1 z-50 w-full items-center gap-10 pb-10 border-y border-solid border-bgDark3 pt-10"
+    class="flex flex-col mt-16 lg:hidden absolute top-4 left-0 bg-bgDark1 z-50 w-full items-center gap-10 pb-10 border-y border-solid border-bgDark3 pt-10 hidden"
   >
     {
       navbarLinks.map(({ label, href, ariaLabel }) => (
@@ -158,7 +158,6 @@ const navbarLinks = [
     }
   });
 
-  // Toggle mobile menu
   hamburgerMenu.addEventListener("click", () => {
     mobileMenu.classList.toggle("hidden");
   });
