--- a/src/components/Features1.astro
+++ b/src/components/Features1.astro
@@ -11,45 +11,50 @@ import { Image } from "astro:assets";
 import NetIcon from "./Icons/NetIcon.astro";
 import ScreenIcon from "./Icons/ScreenIcon.astro";
 import ImageIcon from "./Icons/ImageIcon.astro";
+import MetalCard from "./MetalCard.astro";
 
 ---
 
-<section class="w-full section-with-glow pt-24 md:pt-[12vw] lg:pt-16 z-20 relative">
+<section class="w-full section-with-glow pt-7 md:pt-[12vw] lg:pt-16 z-20 relative">
   <div class="w-screen flex justify-center relative">
+<!--     <div class="mt-[-80px]">
+      <MetalCard></MetalCard>
+    </div> -->
     <div
-      class="w-11/12 sm:w-4/5 lg:w-[90%] xl:w-[80%] 2xl:w-[1200px] mx-auto grid gap-10 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 z-10 rounded-xl mt-[-50px] lg:mt-[-150px] xl:mt-[-250px]"
+      class="w-11/12  sm:w-4/5 lg:w-[90%] xl:w-[80%] 2xl:w-[1200px] mx-auto lg:grid gap-0 lg:gap-3 xl:gap-10 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 z-10 rounded-xl lg:mt-[-150px] xl:mt-[-250px]"
       id="features"
     >
+      
       <div
-        class="feature-card hover:cursor-pointer p-6 flex flex-col items-center gap-6 rounded-3xl backdrop-blur-lg duration-300 ease-in-out h-[350px] shadow-[0_0_50px_0_rgba(200,200,200,0.1)] bg-[rgba(200,200,200,0.2)] main-border-gray-darker mb-4 relative cursor-pointer transition opacity-0 transform translate-y-10"
+        class="feature-card hover:cursor-pointer p-6 flex flex-col items-center gap-6 rounded-t-xl lg:rounded-3xl backdrop-blur-lg duration-300 ease-in-out lg:min-h-[350px] shadow-[0_0_50px_0_rgba(200,200,200,0.1)] bg-[#03041f] lg:bg-[rgba(200,200,200,0.2)] relative cursor-pointer transition opacity-0 transform translate-y-10 lg:border-[1px] lg:border-white/20" 
       >
         <NetIcon />
         <h4 class="gradient-text text-2xl font-semibold text-center custom-shadow">
           Desarrollo web
         </h4>
-        <p class="text-primaryText text-center text-base">
+        <p class="text-primaryText text-center text-base hidden lg:flex">
           Diseñamos sitios web modernos, rápidos y seguros. Nuestros desarrollos están optimizados para destacar en buscadores y ofrecer experiencias excepcionales a tus usuarios.
         </p>
       </div>
       <div
-        class="feature-card hover:cursor-pointer p-6 flex flex-col items-center gap-6 rounded-3xl mt-12 backdrop-blur-lg duration-300 ease-in-out h-[350px] shadow-[0_0_50px_0_rgba(200,200,200,0.1)] bg-[rgba(200,200,200,0.2)] main-border-gray-darker mb-4 relative cursor-pointer transition opacity-0 transform translate-y-10"
+        class="feature-card hover:cursor-pointer p-6 flex flex-col items-center gap-6 lg:rounded-3xl lg:mt-12 backdrop-blur-lg duration-300 ease-in-out lg:min-h-[350px] lg:h-full shadow-[0_0_50px_0_rgba(200,200,200,0.1)] bg-[#03041f] lg:bg-[rgba(200,200,200,0.2)] relative cursor-pointer transition opacity-0 transform translate-y-10 lg:border-[1px] lg:border-white/20" 
       >
-        <ScreenIcon />
+          <ScreenIcon/>
         <h4 class="gradient-text text-2xl font-semibold text-center custom-shadow">
           Aplicaciones a Medida
         </h4>
-        <p class="text-primaryText text-center text-base">
+        <p class="text-primaryText text-center text-base hidden lg:flex">
           Creamos software personalizado que se adapta a las necesidades específicas de tu negocio. Automatiza procesos, mejora la productividad y lleva tu empresa al siguiente nivel con nuestras aplicaciones web.
         </p>
       </div>
       <div
-        class="feature-card hover:cursor-pointer p-6 flex flex-col items-center gap-6 rounded-3xl backdrop-blur-lg duration-300 ease-in-out h-[350px] shadow-[0_0_50px_0_rgba(200,200,200,0.1)] bg-[rgba(200,200,200,0.2)] main-border-gray-darker mb-4 relative cursor-pointer transition opacity-0 transform translate-y-10"
+        class="feature-card hover:cursor-pointer p-6 flex flex-col items-center gap-6 rounded-b-3xl lg:rounded-3xl backdrop-blur-lg duration-300 ease-in-out lg:min-h-[350px] shadow-[0_0_50px_0_rgba(200,200,200,0.1)] bg-[#03041f] lg:bg-[rgba(200,200,200,0.2)] relative cursor-pointer transition opacity-0 transform translate-y-10 lg:border-[1px] lg:border-white/20" 
       >
         <ImageIcon />
         <h4 class="gradient-text text-2xl font-semibold text-center custom-shadow">
           Gestión de Redes Sociales
         </h4>
-        <p class="text-primaryText text-center text-base">
+        <p class="text-primaryText text-center text-base hidden lg:flex">
           Impulsa tu marca con estrategias efectivas en redes sociales. Aumenta tu visibilidad, conecta con tu audiencia y genera un impacto auténtico que convierta seguidores en clientes.
         </p>
       </div>
@@ -60,7 +65,7 @@ import ImageIcon from "./Icons/ImageIcon.astro";
     class="flex flex-wrap items-center 2xl:w-[1450px] xl:w-[1300px] w-11/12 mx-auto md:pl-4 xl:pr-16 xl:pl-16 py-28 xl:pt-[100px]"
     id="about"
   >
-    <div class="w-full lg:w-1/2 mb-12 mt-32 lg:mb-0">
+    <div class="w-full lg:w-1/2 mb-12 mt-10 lg:mt-32 lg:mb-0">
       <div class="mx-auto lg:mx-auto w-11/12 sm:w-4/5 md:w-3/4 lg:w-unset">
         <span class="block-subtitle">Abrazando la Innovación</span>
         <h2 class="mt-6 mb-8 text-4xl lg:text-4xl block-big-title">
@@ -72,13 +77,13 @@ import ImageIcon from "./Icons/ImageIcon.astro";
         <p class="mb-10 text-secondaryText leading-loose">
           En este nuevo escenario, surge Technodevs, estamos aquí para ayudarte a explorar las infinitas oportunidades del universo digital, construir una identidad visual poderosa y destacar entre las demás empresas. Somos únicos y nuestra forma de trabajar también lo es. No solo seguimos tendencias, las creamos, siempre enfocados en generar un impacto significativo.
         </p>
-        <a href="https://wa.me/+5492646270803" target="_blank" class="w-[210px] h-12 contained-button bg-secondary-950 mr-10">
+        <a href="https://wa.me/+5492646270803" target="_blank" class="w-full lg:w-[210px] h-12 contained-button bg-secondary-950 mr-10">
           Contáctanos
         </a>
       </div>
     </div>
     <div
-      class="w-3/4 mx-auto lg:w-1/2 flex flex-wrap lg:-mx-4 sm:pr-8 lg:pt-10 justify-center lg:pl-4 xl:px-8"
+      class="hidden w-3/4 mx-auto lg:w-1/2 lg:flex flex-wrap lg:-mx-4 sm:pr-8 lg:pt-10 justify-center lg:pl-4 xl:px-8"
     >
       <div class="mb-8 lg:mb-0 w-full sm:w-1/2 px-2 lg:px-0">
         <div class="mb-4 py-3 pl-3 pr-2 rounded">
@@ -125,7 +130,7 @@ import ImageIcon from "./Icons/ImageIcon.astro";
     const options = {
       root: null,
       rootMargin: '0px',
-      threshold: 0.30,
+      threshold: 0.40,
     };
 
     const observer = new IntersectionObserver((entries, observer) => {
@@ -171,7 +176,7 @@ import ImageIcon from "./Icons/ImageIcon.astro";
 .section-shadow{
   -webkit-box-shadow: 0px 24px 22px -30px rgba(255,255,255,1);
 -moz-box-shadow: 0px 24px 22px -30px rgba(255,255,255,1);
-box-shadow: 0px 24px 22px -30px rgba(255,255,255,.2)
+box-shadow: 0px 24px 22px -30px rgba(255,255,255,.1)
 }
 
 
