--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -29,7 +29,7 @@ const testimonialsData = [
 ];
 ---
 
-<section class="w-full flex justify-center pt-16 pb-24 bg-bgDark1 relative">
+<div class="w-full flex justify-center pt-16 pb-24 bg-bgDark1 relative">
   <div class="absolute -top-16" id="feedback"></div>
   <div class="flex flex-col w-full lg:w-[1150px] justify-center">
     <div class="text-center mb-6 text-5xl text-white font-semibold">
@@ -83,4 +83,4 @@ const testimonialsData = [
       }
     </div>
   </div>
-</section>
+</div>
