--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="/favicontech.png" />
+    <link rel="icon" href="/faviconAgencia.svg" />
     <meta name="generator" content={Astro.generator} />
     <meta
       name="description"
