agrego boton nuevo diseño

--- a/src/components/Features1.astro
+++ b/src/components/Features1.astro
@@ -77,11 +77,19 @@ import MetalCard from "./MetalCard.astro";
         <p class="mb-10 text-secondaryText leading-loose">
           En este nuevo escenario, surge Technodevs, estamos aquí para ayudarte a explorar las infinitas oportunidades del universo digital, construir una identidad visual poderosa y destacar entre las demás empresas. Somos únicos y nuestra forma de trabajar también lo es. No solo seguimos tendencias, las creamos, siempre enfocados en generar un impacto significativo.
         </p>
-        <a href="https://wa.me/+5492646270803" target="_blank" class="w-full lg:w-[210px] h-12 contained-button bg-secondary-950 mr-10">
+        <div class="flex flex-col items-center lg:items-start max-w-[40rem] gap-10 lg:gap-2 self-end sm:gap-4 sm:self-auto  custom-shadow z-20 h-full justify-center">
+          <a href="https://wa.me/+5492646270803" target="_blank"
+          class="relative w-[200px] h-[50px] rounded-full p-[2px] bg-gradient-to-r from-primaryColor to-secondary-200 bg-[length:200%_200%] bg-[0%_0%] hover:bg-[100%_0%] transition-all duration-200 ease-out"
+          >
+          <span
+          class="flex items-center justify-center w-full h-full bg-[#03041f] text-white rounded-full"
+          >
           Contáctanos
-        </a>
-      </div>
+        </span>
+      </a>
     </div>
+      </div>
+  </div>
     <div
       class="hidden w-3/4 mx-auto lg:w-1/2 lg:flex flex-wrap lg:-mx-4 sm:pr-8 lg:pt-10 justify-center lg:pl-4 xl:px-8"
     >
