--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import VillaDonTomas from "../assets/images/VillaDonTomas.webp";
 import TomasCasiva from "../assets/images/tomasCasiva.png";
-import Domum from "../assets/images/domum.png";
+import Domum from "../assets/images/Domum.png";
 import triangle from "./triangle.svg";
 const testimonialsData = [
   {
