--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -9,7 +9,7 @@ import DonTomas from "../assets/logos/dontomas.png";
 
 import VillaDonTomas from "../assets/images/VillaDonTomas.webp";
 import TomasCasiva from "../assets/images/tomasCasiva.png";
-import DomumPNG from "../assets/images/Domum.png";
+import DomumPNG from "../assets/images/domum.png";
 import triangle from "./triangle.svg";
 const testimonialsData = [
   {
