--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,6 @@ import '../styles/Diagonals.css'
   <FeaturesDiagonal client:load/>
   <Pricing />
   <Brands />
-  <Blog />
+<!--   <Blog /> -->
   <FAQ client:load /> 
 </Layout>
