--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -1,9 +1,9 @@
 ---
-import { fetchBlogPosts } from "../service/BlogService";
+import { getBlogPosts } from "../service/BlogService";
 
-const posts = await fetchBlogPosts();
-const visiblePosts = posts.slice(0, 3); // Muestra hasta 3 posts
-const showMore = posts.length > 3; // Muestra el botón "Ver más" si hay más de 3 posts
+const posts = await getBlogPosts();
+const visiblePosts = posts.slice(0, 3);
+const showMore = posts.length > 3;
 ---
 
 <section
@@ -33,7 +33,7 @@ const showMore = posts.length > 3; // Muestra el botón "Ver más" si hay más d
         visiblePosts.map((post, index) => (
           <a
             href={`/posts/${post.id}`}
-            class="bg-[rgba(48,49,54,0.7)] rounded-3xl flex flex-col border-[1px] border-[rgba(255,255,255,0.2)] h-[470px] overflow-hidden text-white hover:bg-[rgba(48,49,54,0.9)] transition duration-100"
+            class="bg-[rgba(48,49,54,0.7)] rounded-3xl flex flex-col border-[1px] border-[rgba(255,255,255,0.2)] max-h-[470px] overflow-hidden text-white"
           >
             <img
               src={post.image}
@@ -45,7 +45,7 @@ const showMore = posts.length > 3; // Muestra el botón "Ver más" si hay más d
                 {post.title}
               </h3>
               <p
-                class="text-red-500"
+                class="text-white"
                 set:html={post.subtitle}
               />
             </div>
