--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Features1 from '../components/Features1.astro'
-import Testimonials from '../components/Testimonials.astro'
 import FeaturesDiagonal from '../components/FeaturesDiagonal.jsx'
 import Pricing  from '../components/Pricing.astro'
 import { FAQ } from '../components/FAQ.jsx'
@@ -18,6 +17,6 @@ import '../styles/Diagonals.css'
   <FeaturesDiagonal client:load/>
   <Pricing />
   <Brands />
-<!--   <Blog /> -->
+  <Blog />
   <FAQ client:load /> 
 </Layout>
