--- a/src/pages/posts/SubHeader.astro
+++ b/src/pages/posts/SubHeader.astro
@@ -1,6 +1,7 @@
 ---
-const post = Astro.props.post;
+const post = Astro.props.post ?? { categorie: 'Sin categoría' };
 ---
+
 <div class="text-md bg-gray-800 text-white w-full text-center py-2 flex justify-between">
   <div class="container mx-auto px-4 lg:px-32 flex gap-4">
       <span>📖Blog</span>
