--- a/src/pages/posts/AvatarInfoContainer.astro
+++ b/src/pages/posts/AvatarInfoContainer.astro
@@ -1,18 +1,24 @@
 ---
 import { FaLinkedin } from "react-icons/fa";
-const author = Astro.props.author;
+const { author } = Astro.props;
 ---
 
 <div class="flex gap-4 items-center">
-  <img class="w-14 h-14 rounded-full" src={author.avatar} alt="" />
+  {author && author.avatar ? (
+    <img class="w-14 h-14 rounded-full" src={author.avatar} alt="Avatar" />
+  ) : (
+    <img class="w-14 h-14 rounded-full" src="/default-avatar.png" alt="Default Avatar" />
+  )}
   <div class="flex flex-col justify-between h-14">
     <span class="text-black text-lg font-semibold">
-      {author.name}
+      {author ? author.name : "Autor desconocido"}
     </span>
-    <a href={author.linkedin} target="_blank">
-      <FaLinkedin
-        className="text-black text-2xl hover:cursor-pointer transition"
-      />
-    </a>
+    {author && author.linkedin ? (
+      <a href={author.linkedin} target="_blank">
+        <FaLinkedin className="text-black text-2xl hover:cursor-pointer transition" />
+      </a>
+    ) : (
+      <span class="text-gray-500">Sin LinkedIn</span>
+    )}
   </div>
 </div>
