--- a/src/components/Brands.astro
+++ b/src/components/Brands.astro
@@ -98,7 +98,7 @@ const testimonialsData = [
     >
       {
         testimonialsData.map((testimonial, index) => (
-          <div class="w-full sm:w-4/5 md:w-[560px] lg:w-1/3 bg-[#f9f9f9] border-[#e0e0e0] shadow-light rounded-xl p-6 flex flex-col">
+          <div class="w-full sm:w-4/5 md:w-[560px] lg:min-h-[348px] lg:w-1/3 bg-[#f9f9f9] border-[#e0e0e0] shadow-light rounded-xl p-6 flex flex-col">
             <div class="flex mb-4">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
