--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,7 +49,22 @@ const { title } = Astro.props;
       type="font/woff2"
       crossorigin="anonymous"
     />
-  </head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KSM8YQEE64"
+    ></script></head
+  >
+  
+  <!-- Google tag (gtag.js) -->
+
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-KSM8YQEE64");
+  </script>
+
   <body class="bg-bgDark1">
     <main aria-label="Main content">
       <Navbar />
