--- a/src/pages/posts/[id].astro
+++ b/src/pages/posts/[id].astro
@@ -1,8 +1,8 @@
 ---
+import AvatarInfoContainer from "../../components/AvatarInfoContainer.astro";
+import SubHeader from "../../components/SubHeader.astro";
 import Layout from "../../layouts/Layout.astro";
 import { getBlogPosts, getPostById } from "../../service/BlogService";
-import AvatarInfoContainer from "./AvatarInfoContainer.astro";
-import SubHeader from "./SubHeader.astro";
 
 export async function getStaticPaths() {
   const posts = await getBlogPosts();
@@ -15,7 +15,6 @@ export async function getStaticPaths() {
 const { id } = Astro.params;
 
 const post = await getPostById(id);
-
 if (!post) {
   throw new Error("Post no encontrado");
 }
