Agrego vista de blog y merge Server side rendering

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -59,8 +59,8 @@ const showMore = posts.length > 3;
       showMore && (
         <div class="flex justify-center mt-8">
           <a
-            href="/blog"
-            class="bg-primaryText text-white py-2 px-6 rounded-full font-semibold transition hover:bg-primaryTextHover"
+            href="/posts"
+            class="bg-gray-100 text-blackPrimary py-2 px-6 rounded-full font-semibold transition hover:bg-primaryTextHover"
           >
             Ver más
           </a>
