--- a/src/components/BlogPage.astro
+++ b/src/components/BlogPage.astro
@@ -1,16 +1,10 @@
 ---
 import { getBlogPosts } from "../service/BlogService";
-import { getAllCategories } from "../service/CategorieService";
+import { getCategoriesWithPosts } from "../service/CategorieService";
 
 const posts = await getBlogPosts();
-const categories = await getAllCategories();
 
-/* const categoriesWithPosts = await Promise.all(
-    categories.map(async (category) => {
-        const categoryPosts = posts.filter(post => post.category.id === category.id);
-        return { ...category, posts: categoryPosts };
-    })
-); */
+const categoriesWithPosts = await getCategoriesWithPosts();
 
 const latestPost = posts[0];
 const otherPosts = posts.slice(1, 4);
@@ -66,18 +60,18 @@ const showMore = posts.length > 4;
         <aside class="w-full lg:w-1/4 bg-gray-100 p-6 rounded-xl">
             <h3 class="text-xl font-bold text-bgDark1 mb-4">Categorías</h3>
             <ul>
-                <!-- {categoriesWithPosts.map((category) => (
+                {categoriesWithPosts.map(category => (
                     <li class="mb-4">
-                        <h4 class="text-lg font-semibold text-secondaryColor">{category.name}</h4>
-                        <ul class="ml-4 list-disc">
+                        <h4 class="text-lg font-semibold">{category.name}</h4>
+                        <ul class="ml-2">
                             {category.posts.map(post => (
                                 <li>
-                                    <a href={`/posts/${post.id}`} class="text-bgDark1 hover:underline">{post.title}</a>
+                                    <a href={`/posts/${post.id}`} class="text-blue-500 hover:underline">{post.title}</a>
                                 </li>
                             ))}
                         </ul>
                     </li>
-                ))} -->
+                ))}
             </ul>
         </aside>
     </div>
