--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -59,7 +59,7 @@ const showMore = posts.length > 3;
       showMore && (
         <div class="flex justify-center mt-8">
           <a
-            href="/posts"
+            href="/blog"
             class="bg-gray-100 text-blackPrimary py-2 px-6 rounded-full font-semibold transition hover:bg-primaryTextHover"
           >
             Ver más
