--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -143,7 +143,7 @@ const navbarLinks = [
   const navbar = document.getElementById("navbar");
   const hamburgerMenu = document.getElementById("hamburgerMenu");
   const mobileMenu = document.getElementById("mobileMenu");
-  const isBlogPage = window.location.href.includes("posts");
+  const isBlogPage = window.location.href.includes("blog");
 
   if (isBlogPage) {
     navbar.classList.add("bg-gray-950/70", "backdrop-blur-md", "shadow-md");
